Bug 256943 - [JSC] Extend megamorphic store cache with invalidating replacement watchpoint set
Summary: [JSC] Extend megamorphic store cache with invalidating replacement watchpoint...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-17 20:07 PDT by Yusuke Suzuki
Modified: 2023-05-18 14:12 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2023-05-17 20:07:47 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-05-17 20:08:09 PDT
<rdar://problem/109493502>
Comment 2 Yusuke Suzuki 2023-05-17 20:08:56 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14001
Comment 3 EWS 2023-05-18 14:12:57 PDT
Committed 264212@main (b4d99e644e12): <https://commits.webkit.org/264212@main>

Reviewed commits have been landed. Closing PR #14001 and removing active labels.